--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hangman2",
+  "name": "hangmanReact",
   "version": "1.0.0",
-  "description": "The hangman2 game in using TDD approach",
+  "description": "The hangman man game using react",
   "main": "index.js",
   "scripts": {
     "test": "play"
@@ -9,7 +9,7 @@
   "keywords": [
     "game",
     "es6",
-    "tdd"
+    "react"
   ],
   "author": "Oren",
   "license": "ISC",
@@ -25,22 +25,6 @@
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "image-webpack-loader": "^3.0.0",
-    "isparta": "^4.0.0",
-    "isparta-instrumenter-loader": "^1.0.0",
-    "isparta-loader": "^2.0.0",
-    "istanbul-instrumenter-loader": "^1.0.0",
-    "jasmine": "^2.5.2",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.3.0",
-    "karma-babel-preprocessor": "^6.0.1",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage": "^1.1.1",
-    "karma-htmlfile-reporter": "^0.2.2",
-    "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-phantomjs-shim": "^1.2.0",
-    "karma-verbose-reporter": "0.0.3",
-    "karma-webpack": "^1.8.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
   },
